--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@uniswap/default-token-list",
-  "version": "2.0.0",
-  "description": "◦ The Uniswap default token list",
-  "main": "build/uniswap-default.tokenlist.json",
+  "name": "@comethswap/default-token-list",
+  "version": "1.0.0",
+  "description": "The Comethswap default token list",
+  "main": "build/comethswap-default.tokenlist.json",
   "scripts": {
     "test": "mocha",
-    "build": "rimraf build && mkdir -p build && node src/write.js > build/uniswap-default.tokenlist.json",
+    "build": "rimraf build && mkdir -p build && node src/write.js > build/comethswap-default.tokenlist.json",
     "prepublishOnly": "npm test && npm run build"
   },
   "files": [
@@ -13,20 +13,20 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Uniswap/default-token-list.git"
+    "url": "git+https://github.com/cometh-game/default-token-list.git"
   },
   "keywords": [
-    "uniswap",
+    "comethswap",
     "default",
     "token",
     "list"
   ],
-  "author": "Moody Salem",
+  "author": "Cometh",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/Uniswap/default-token-list/issues"
+    "url": "https://github.com/cometh-game/default-token-list/issues"
   },
-  "homepage": "https://github.com/Uniswap/default-token-list#readme",
+  "homepage": "https://github.com/cometh-game/default-token-list#readme",
   "devDependencies": {
     "@ethersproject/address": "^5.0.2",
     "@uniswap/token-lists": "^1.0.0-beta.8",
